# updater

./: .gitignore  CMakeLists.txt
lib/: AppInfoProvider.cpp  AppInfoProvider.h  CMakeLists.txt  ProcessUtils.cpp  ProcessUtils.h  UpdateInfo.h  Updater.cpp  Updater.h  Url.cpp  Url.h  Utils.cpp  Utils.h
ui/: BaseApp.h  CMakeLists.txt  DataViewBitmapRenderer.cpp  DataViewBitmapRenderer.h  DownloadDlg.cpp  DownloadDlg.h  DownloadPanel.cpp  DownloadPanel.h  Tray.cpp  Tray.h  UpdateDlg.cpp  UpdateDlg.h  UpdateThreads.cpp  UpdateThreads.h  Updater.rc  Updater.xrc  UpdaterApp.cpp  UpdaterApp.h  WaitDlg.cpp  WaitDlg.h
utils/: build.xml
utils/src/: PackageMaker.java
